<resources>
    <string name="app_name">CineMania</string>
    <string name="title_activity_main">CineMania</string>
    <string name="start">Démarrer</string>
    <string name="option">Options</string>
    <string name="quit">Quitter</string>
	<string name="titre1"> [ Cine</string>
	<string name="titre2">Mania ]</string>
	<string name="option1">Option 1</string>
	<string name="option2">Option 2</string>
	<string name="retour">Retour</string>
	<string name="already_registered">Déjà enregistré</string>
	<string name="error_config">Erreur de configuration</string>
	<string name="gcm_registered">GCM enregistré</string>
	<string name="gcm_unregistered">GCM désenregistré</string>
	<string name="gcm_message">Message</string>
	<string name="gcm_deleted">Supression</string>
	<string name="gcm_error">Erreur</string>
	<string name="gcm_recoverable_error">Erreur récupérable</string>
	<string name="server_registering">Serveur en cours d\'enregistrement</string>
	<string name="server_registered">Serveur enregistré</string>
	<string name="server_register_error">Erreur d\'enregistrement du serveur</string>
	<string name="server_unregistered">Désenregistrement du serveur</string>
	<string name="server_unregister_error">Erreur de désenregistrement du serveur</string>
	<string name="retour">Retour</string>
	<string name="retour">Retour</string>
	<string name="icon_descriptor">icon</string>
	<string name="title_cinema">Cinéma</string>
	<string name="title_confirm">Tour suivant</string>
	<string name="title_diceresult">Résultat du lancé</string>
	<string name="title_hq">QG</string>
	<string name="title_script">Scripts</string>
	<string name="title_actors">Ecole d\'acteurs</string>
	<string name="title_logistics">Logistique</string>
	<string name="title_profit">Financement</string>
	<string name="title_profit_money">Argents gagnés</string>
	<string name="title_profit_actor">Acteurs gagnés</string>
	<string name="title_profit_logistic">Logistiques gagnées</string>
	<string name="title_profit_bonus">Bonus : </string>
	<string name="title_author_film">Film d\'auteurs</string>
	<string name="title_quit">Fin de partie</string>
	<string name="txt_profit_cinema">Cinémas : </string>
	<string name="txt_profit_movies">Films : </string>
	<string name="txt_profit_actor">Écoles d\'acteurs : </string>
	<string name="txt_profit_logistic">Fabrique de logistiques : </string>
	<string name="btn_ok">Valider</string>
	<string name="btn_move">Avancer</string>
	<string name="btn_pay">Payer</string>
	<string name="btn_buy">Acheter</string>
	<string name="btn_close">Fermer</string>
	<string name="btn_perdu">Quitter</string>
	<string name="txt_confirm_title">Voulez-vous vraiment passer votre tour?</string>
	<string name="txt_quitter">Vous avez perdu&#8230;</string>
	<string name="txt_dice_title">Vous avez fait un : </string>
	<string name="btn_confirm">Oui</string>
	<string name="btn_cancel">Annuler</string>
	<string name="layout_title">Titre</string>
	<string name="txt_proprio">"Propriétaire : "</string>
	<string name="txt_libre">libre</string>
	<string name="txt_type_de_revenu">Type de revenu :</string>
	<string name="txt_type">type</string>
	<string name="txt_qte_de_revenu">Qte min de revenu :</string>
	<string name="txt_type_de_transaction">Type de transaction :</string>
	<string name="txt_achat">achat</string>
	<string name="txt_rachat">rachat</string>
	<string name="txt_montant">Montant :</string>
	<string name="txt_acteurs">acteurs</string>
	<string name="txt_logistique">logistique</string>
	<string name="txt_parenthese_gauche"> (</string>
	<string name="txt_parenthese_droite">) </string>
	<string name="txt_description">Description</string>
	<string name="txt_statistiquesCinema">Statistiques de vos cinémas</string>
	<string name="txt_nbfilm">Nombre de films produits :</string>
	<string name="txt_benefices">Bénéfices des cinémas :</string>
	<string name="title_chance">Chance</string>
	<string name="txt_benefices">Dernier bénéfices :</string>
	<string name="btn_level">Acheter un niveau</string>
	<string name="btn_prod">Produire</string>
	<string name="txt_levelActuel">Niveau actuel :</string>
	<string name="txt_prix">Prix :</string>
	<string name="txt_entretien">Coût d\'entretien :</string>
	<string name="txt_nombre_de_salles">Nombre de salles :</string>
	<string name="txt_nextlevel">Prix prochain niveau :</string>
	<string name="txt_no_script_available">Aucun script disponible&#8230;</string>
	<string name="txt_production">"Coûts de production : "</string>
	<string name="txt_next_production">Prochaine production :</string>
</resources>
