<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFBB33"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginRight="10dp"
            android:background="#FFFFBB33"
            android:contentDescription="@string/icon_descriptor"
            android:scaleType="center"
            android:src="@drawable/ic_cinema" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title_cinema"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="normal" />
    </LinearLayout>

    <!-- début de l'UI -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/txt_statistiquesCinema"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="normal" />

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dip" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txt_nbfilm"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="normal" 
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/txtnbFilms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="normal"
                android:layout_weight="1.0"
                android:paddingLeft="5sp"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txt_benefices"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="normal"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtBenefices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="normal"
                android:layout_weight="1.0" 
                android:paddingLeft="5sp"
                android:textSize="15sp"/>
        </TableRow>
    </TableLayout>

</LinearLayout>