<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/baseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFBB33"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgTitle"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#FFFFBB33"
                android:contentDescription="@string/icon_descriptor"
                android:scaleType="center"
                android:src="@drawable/ic_scripts" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/title_author_film"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1" >
            
            <TextView
                android:id="@+id/authorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/layout_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/innerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp" >

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_parenthese_gauche"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                
                <TextView
                    android:id="@+id/authorYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="1930"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:text="@string/txt_parenthese_droite"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@string/icon_descriptor"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_money" />
                
                <TextView
                    android:id="@+id/authorPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:text="486"
                    android:textColor="#FFFFBB33"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>