<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFBB33"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgTitle"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginRight="10dp"
                android:background="#FFFFBB33"
                android:contentDescription="@string/icon_descriptor"
                android:scaleType="center"
                android:src="@drawable/ic_hq" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/title_profit"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:typeface="normal" />
        </LinearLayout>
        <!-- début de l'UI -->
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/txtProfit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/title_profit_money"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TableLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TableRow
                    android:id="@+id/rowMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txtProfitMovies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/txt_profit_cinema"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txtNbMovies"
                        android:gravity="right"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1.0"
                        android:paddingLeft="5sp"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <ImageView
                        android:id="@+id/imgMovie"
                        android:layout_width="28dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/icon_descriptor"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_money" />

                </TableRow>

                <TableRow
                    android:id="@+id/rowCinema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible" >

                    <TextView
                        android:id="@+id/txtProfitCinema"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/txt_profit_movies"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txtNbCinema"
                        android:gravity="right"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1.0"
                        android:paddingLeft="5sp"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <ImageView
                        android:id="@+id/imgCinema"
                        android:layout_width="28dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/icon_descriptor"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_money" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/txtActeur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/title_profit_actor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtProfitActor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/txt_profit_actor"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txtNbActor"
                    android:gravity="right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:paddingLeft="5sp"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/imgActor"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@string/icon_descriptor"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_actors" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtLogistic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/title_profit_logistic"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtProfitLogistic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/txt_profit_logistic"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txtNbLogistic"
                    android:gravity="right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:paddingLeft="5sp"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/imgLogisitc"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@string/icon_descriptor"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_logistics" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/title_profit_actor"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>